Add partition html output file

--- a/src/main/resources/crucial.html
+++ b/src/main/resources/crucial.html
@@ -55,7 +55,7 @@
 
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="crucial.js"></script>
+<script src="partition.js"></script>
 <script>
     document.getElementById("title").innerText = "Crucial nodes for " + crucial.projectName
     crucial.stats.map(x => {
